# config/routes.rb
@@ -1,10 +1,11 @@
 Rails.application.routes.draw do
   # devise_for :users
-  post 'auth_user' => 'no_auth/authentication#authenticate_user'
   resources :healthz, only: %(index)
 
   namespace :api do
     namespace :v1 do
+      post 'users' => 'users#create'
+      post 'users/authenticate' => 'users#authenticate'
       resources :projects, only: %i[index show create update destroy]
       resources :tasks, only: %i[index show create update destroy]
       resources :teams, only: %i[index show create update destroy]
