# docs/api/openapi.yaml
@@ -9,7 +9,7 @@ servers:
   - url: "http://localhost:8080/api/v1"
 tags:
   - name: projects
-    description: project
+  - name: users
 paths:
   /projects:
     get:
@@ -79,8 +79,6 @@ paths:
             application/json:
               schema:
                 type: object
-                required:
-                  - errors
                 properties:
                   errors:
                     type: array
@@ -89,6 +87,93 @@ paths:
               example:
                 errors:
                   - "Not Authenticated"
+  /users:
+    post:
+      tags:
+        - users
+      summary: Create a user.
+      description: Creates a user and Returns user's auth token
+      requestBody:
+        content:
+          application/json:
+            schema:
+              properties:
+                email:
+                  description: user's email
+                  type: string
+                password:
+                  description: user's password
+                  type: string
+              required:
+                - email
+                - password
+              type: object
+            example:
+              email: sample@email.com
+              password: password
+      parameters: []
+      responses:
+        '200':
+          description: A JSON user's auth token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  auth_token:
+                    type: string
+              example:
+                auth_token: eyJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoxMDIsImV4cCI6MTYwMzU1OTMzMn0.o_RZeJxzJTcdN30PmxpH6zd0BrUvn477pTQCfaoYZOE
+  /users/authenticate:
+    post:
+      tags:
+        - users
+      summary: Authenticate a user.
+      description: Authenticate a user and Returns user's auth token
+      requestBody:
+        content:
+          application/json:
+            schema:
+              properties:
+                email:
+                  description: user's email
+                  type: string
+                password:
+                  description: user's password
+                  type: string
+              required:
+                - email
+                - password
+              type: object
+            example:
+              email: sample@email.com
+              password: password
+      responses:
+        '200':
+          description: A JSON user's auth token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  auth_token:
+                    type: string
+              example:
+                auth_token: eyJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoxMDIsImV4cCI6MTYwMzU1OTMzMn0.o_RZeJxzJTcdN30PmxpH6zd0BrUvn477pTQCfaoYZOE
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: array
+                    items:
+                      type: string
+              example:
+                errors:
+                  - "Invalid email/password"
 components:
   securitySchemes:
     Bearer:
